[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/models/railkill/player/fatdino.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/scripts/characters/player.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/characters/hand_controller.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/props/clothes/glasses.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scripts/zone_grabber.gd" type="Script" id=5]

[sub_resource type="SphereShape" id=1]
radius = 2.5

[sub_resource type="SphereShape" id=2]
radius = 5.0

[sub_resource type="CapsuleShape" id=3]
radius = 1.2
height = 3.4

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "biggify"

[sub_resource type="AnimationNodeAdd2" id=5]
filter_enabled = true
filters = [ "DinoBones/Skeleton:Arm.R" ]

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle-loop"

[sub_resource type="AnimationNodeAdd2" id=7]
filter_enabled = true
filters = [ "DinoBones/Skeleton:Leg.Upper.L", "DinoBones/Skeleton:Leg.Upper.R" ]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "pain"

[sub_resource type="AnimationNodeOneShot" id=9]

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run-loop"

[sub_resource type="AnimationNodeTimeScale" id=11]

[sub_resource type="AnimationNodeBlendTree" id=12]
graph_offset = Vector2( 254, 38.5 )
nodes/Biggify/node = SubResource( 4 )
nodes/Biggify/position = Vector2( 140, -40 )
nodes/Fattening/node = SubResource( 5 )
nodes/Fattening/position = Vector2( 340, -160 )
nodes/Idle/node = SubResource( 6 )
nodes/Idle/position = Vector2( 140, -160 )
nodes/Movement/node = SubResource( 7 )
nodes/Movement/position = Vector2( 540, -20 )
nodes/Pain/node = SubResource( 8 )
nodes/Pain/position = Vector2( 340, 180 )
nodes/PainOneShot/node = SubResource( 9 )
nodes/PainOneShot/position = Vector2( 740, 100 )
nodes/Run/node = SubResource( 10 )
nodes/Run/position = Vector2( 340, 40 )
nodes/TimeScale/node = SubResource( 11 )
nodes/TimeScale/position = Vector2( 540, 180 )
nodes/output/position = Vector2( 940, 100 )
node_connections = [ "output", 0, "PainOneShot", "Fattening", 0, "Idle", "Fattening", 1, "Biggify", "PainOneShot", 0, "Movement", "PainOneShot", 1, "TimeScale", "Movement", 0, "Fattening", "Movement", 1, "Run", "TimeScale", 0, "Pain" ]

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="HandControl" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7, 0 )
script = ExtResource( 3 )

[node name="Target" type="Spatial" parent="HandControl"]

[node name="CSGBox" type="CSGBox" parent="HandControl/Target"]
transform = Transform( 1, 0, 0, 0, 0.501839, 0, 0, 0, 1, 0, 0, 0 )
visible = false
depth = 6.95986

[node name="CSGSphere" type="CSGSphere" parent="HandControl/Target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.79654 )
visible = false
radius = 1.5

[node name="Punch" type="KinematicBody" parent="HandControl" groups=[
"attack",
]]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="HandControl/Punch"]
shape = SubResource( 1 )

[node name="Grabber" type="Area" parent="HandControl"]
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="HandControl/Grabber"]
shape = SubResource( 2 )

[node name="Model" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="EyesDead" parent="Model" index="0"]
visible = false

[node name="Skeleton" parent="Model/DinoBones" index="0"]
bones/10/bound_children = [ NodePath("BoneAttachment"), NodePath("BoneAttachment2"), NodePath("BoneAttachment3") ]

[node name="BoneAttachment" parent="Model/DinoBones/Skeleton" index="0"]
transform = Transform( 1, -8.51322e-05, -5.05723e-05, -5.05223e-05, 0.00060375, -1, 8.51676e-05, 1, 0.00060384, 0.00616622, 4.2773, 0.0562853 )

[node name="BoneAttachment2" parent="Model/DinoBones/Skeleton" index="1"]
transform = Transform( 1, -8.51322e-05, -5.05723e-05, -5.05223e-05, 0.00060375, -1, 8.51676e-05, 1, 0.00060384, 0.00616622, 4.2773, 0.0562853 )

[node name="EyesPain" parent="Model/DinoBones/Skeleton/BoneAttachment2" index="0"]
visible = false

[node name="SkeletonIK" type="SkeletonIK" parent="Model/DinoBones/Skeleton" index="4"]
process_priority = 1
root_bone = "Arm.R"
tip_bone = "Hand.R"
override_tip_basis = false
target_node = NodePath("../../../../HandControl/Target")

[node name="BoneAttachment3" type="BoneAttachment" parent="Model/DinoBones/Skeleton" index="5"]
transform = Transform( 1, -8.51322e-05, -5.05723e-05, -5.05223e-05, 0.00060375, -1, 8.51676e-05, 1, 0.00060384, 0.00616622, 4.2773, 0.0562853 )
bone_name = "Head"

[node name="Glasses" parent="Model/DinoBones/Skeleton/BoneAttachment3" instance=ExtResource( 4 )]
transform = Transform( 1, 3.84254e-05, -6.452e-05, 6.45292e-05, -0.000457598, 1, 3.83918e-05, -0.999999, -0.000457674, 0, 1.168, -1.035 )
collision_layer = 0
collision_mask = 0
mode = 1
mass = 0.005
sleeping = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.89499, 0.197144 )
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 18.2976, 7.24747 )
fov = 90.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../Model/AnimationPlayer")
active = true
parameters/Fattening/add_amount = 1.0
parameters/Movement/add_amount = 0.0
parameters/PainOneShot/active = false
parameters/TimeScale/scale = 2.0

[editable path="Model"]
